#cmake_minimum_required(VERSION 3.15)
cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp main.cpp Base00.cpp Base00.h Base01.cpp Base01.h
        Chapter01Test.cpp
        Chapter01Test.h
        Chapter02Test.cpp
        Chapter02Test.h
        Chapter03Test.cpp
        Chapter03Test.h
        Chapter04Test.cpp
        Chapter04Test.h
        Chapter05Test.cpp
        Chapter05Test.h
        Chapter06Test.cpp
        Chapter06Test.h
        Chapter07Test.cpp
        Chapter07Test.h
        Chapter08Test.cpp
        Chapter08Test.h
        Chapter09Test.cpp
        Chapter09Test.h
        Chapter10Test.cpp
        Chapter10Test.h
        Chapter11Test.cpp
        Chapter11Test.h
        Chapter12Test.cpp
        Chapter12Test.h
        Chapter13Test.cpp
        Chapter13Test.h
        Chapter14Test.cpp
        Chapter14Test.h
        Chapter15Test.cpp
        Chapter15Test.h
        Chapter16Test.cpp
        Chapter16Test.h
        Chapter17Test.cpp
        Chapter17Test.h
        Chapter18Test.cpp
        Chapter18Test.h
        runoob/Chapter01Test.cpp
        runoob/Chapter01Test.h
        shizhan/Chapter01Test.cpp
        shizhan/Chapter01Test.h
        )